demos/deploy/openvino-cpu/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: intel-rh-openvino-inference
  labels:
    app.kubernetes.io/name: openvino-inference
    platform: intel-xeon6
